--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=service.main
 server.port=8888
-spring.cloud.config.server.git.uri=
+spring.cloud.config.server.git.uri=https://github.com/vhraposo/config-server.git
 spring.cloud.config.server.git.clone-on-start=true
 spring.cloud.config.server.git.search-paths=config
 eureka.client.registerWithEureka=false
