--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.cloud.config.server.git.search-paths=config
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
 eureka.instance.hostname=localhost
-eureka.server.enableSelfPreservation=false
+spring.cloud.config.server.prefix=/config
